2007-04-17  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/fp.c: deal better with drawables that are not
	the same size as the image. Fixes bug #430455.

2007-04-17  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/fp.c: use g_malloc(); plugged memory leaks.

2007-04-17  Sven Neumann  <sven@gimp.org>

	Allow other applications to open images in GIMP as if they were
	new images (without associating a filename). Fixes bug #423118.

	* app/file/file-open.[ch]: added parameter 'as_new' to
	file_open_image() and its variants.

	* app/actions/data-commands.c
	* app/actions/documents-commands.c
	* app/actions/file-commands.c
	* app/core/gimpimagefile.c
	* app/dialogs/file-open-dialog.c
	* app/dialogs/file-open-location-dialog.c
	* app/widgets/gimptoolbox.c
	* app/widgets/gimptoolbox-dnd.c: changed accordingly.

	* app/app.[ch]
	* app/main.c: added new command-line option '--as-new'.

	* app/widgets/gimpdbusservice.[ch]
	* app/widgets/dbus-service.xml: added new method OpenAsNew to the
	D-Bus interface.

	* docs/gimp.1.in: document the new command-line option.

2007-04-17  Sven Neumann  <sven@gimp.org>

	* plug-ins/script-fu/scripts/neon-logo.scm: applied slightly
	modified patch from Aurimas Juška which fixes bug #167260 by not
	allowing the selection to shrink too much.

2007-04-17  Michael Natterer  <mitch@gimp.org>

	* app/config/gimprc.c
	* app/plug-in/gimppluginmanager.c
	* app/plug-in/gimpplugin.c
	* app/gui/themes.c: don't translate --verbose or g_printerr()
	messages, they are debugging output that often end up in bugzilla
	and should not depend on the locale.

2007-04-17  Michael Natterer  <mitch@gimp.org>

	* plug-ins/common/gqbist.c: applied slightly modified patch from
	Aurimas Juška which adds an undo button to go back to the previous
	state. Fixes bug #356662.

2007-04-17  Sven Neumann  <sven@gimp.org>

	* plug-ins/print/Makefile.am: use GTK_CFLAGS and GTK_LIBS.

2007-04-16  Sven Neumann  <sven@gimp.org>

	* app/base/pixel-surround.c: documentation fix.
