@@ -1,5 +1,11 @@
 2007-04-17  Sven Neumann  <sven@gimp.org>
 
+	* libgimpwidgets/gimppreviewarea.c: allow the draw, blend, mask
+	and fill methods to be called with zero width or height. Nothing
+	will be drawn, but it's still a valid call.
+
+2007-04-17  Sven Neumann  <sven@gimp.org>
+
 	* plug-ins/common/fp.c: deal better with drawables that are not
 	the same size as the image. Fixes bug #430455.
 
